Fix gap on dashboard and confirmation modal

--- a/src/app/pages/dashboard-page/dashboard-page.component.scss
+++ b/src/app/pages/dashboard-page/dashboard-page.component.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
   height: 90vh;
 
   h1 {
